# null-e

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: 404.md  ANALYSIS.md  CACHES.md  CLEANERS.md  _config.yml  index.md
docs/_layouts/: default.html  post.html
docs/_posts/: 2024-01-28-clean-node-modules-reclaim-disk-space.md  2024-01-29-clean-xcode-deriveddata-macos.md  2024-01-30-docker-cleanup-guide.md  2024-01-31-clean-rust-target-folder.md  2024-02-01-no-space-left-on-device-how-to-fix-disk-full-panic.md  2024-02-01-null-e-vs-npkill-vs-kondo.md  2024-02-15-node-modules-javascript-cleanup-guide.md  2024-02-16-python-venv-pycache-cleanup-guide.md  2024-02-17-rust-target-directory-cleanup-guide.md  2024-02-18-java-gradle-maven-cleanup-guide.md  2024-02-19-go-vendor-module-cache-cleanup.md  2024-02-20-docker-disk-space-cleanup-guide.md  2024-02-21-xcode-deriveddata-cleanup-guide.md  2024-02-22-ml-ai-disk-space-cleanup.md  2024-02-23-dotnet-build-artifacts-cleanup.md  2024-02-24-ruby-bundle-gem-cleanup.md  2024-02-25-php-vendor-composer-cleanup.md  2024-02-26-electron-apps-cache-cleanup.md  2024-02-27-homebrew-cleanup-guide.md
homebrew/: null-e.rb
src/: lib.rs  main.rs
src/analysis/: duplicates.rs  git.rs  mod.rs  stale.rs
src/cache/: mod.rs
src/caches/: mod.rs
src/cleaners/: android.rs  binaries.rs  cloud.rs  docker.rs  electron.rs  gamedev.rs  homebrew.rs  ide.rs  ios_deps.rs  logs.rs  macos.rs  ml.rs  mod.rs  runtimes.rs  xcode.rs
src/config/: file.rs  mod.rs
src/core/: artifact.rs  cleaner.rs  mod.rs  project.rs  scanner.rs
src/docker/: mod.rs
src/error/: mod.rs
src/git/: mod.rs  protection.rs  status.rs
src/plugins/: dotnet.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  registry.rs  rust.rs  swift.rs
src/scanner/: mod.rs  parallel.rs
src/trash/: mod.rs  platform.rs  record.rs
src/tui/: app.rs  mod.rs
tests/: integration_tests.rs
