[package]
name = "null-e"
version = "0.1.0"
edition = "2021"
authors = ["us"]
description = "🤖 null-e: The friendly disk cleanup robot - Send your cruft to /dev/null"
license = "MIT"
repository = "https://github.com/us/null-e"
homepage = "https://github.com/us/null-e"
keywords = ["cleanup", "disk-space", "developer-tools", "node-modules", "cache", "devnull"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
readme = "README.md"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async/Parallel processing
rayon = "1.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "5.5"

# Filesystem operations
jwalk = "0.8"
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"
dirs = "5.0"
fs_extra = "1.3"

# Git integration
gix = { version = "0.58", default-features = false, features = ["max-performance", "status"] }

# Trash support (cross-platform)
trash = "3.3"

# TUI (Terminal User Interface)
ratatui = "0.26"
crossterm = "0.27"

# CLI
clap = { version = "4.4", features = ["derive", "env", "color"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"
num_cpus = "1.16"
once_cell = "1.19"
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Docker (optional)
bollard = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3.9"
assert_fs = "1.0"
predicates = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"

[features]
default = ["docker"]
docker = ["dep:bollard"]
full = ["docker"]

[[bin]]
name = "null-e"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
