[package]
name = "null-e"
version = "0.2.0"
edition = "2021"
authors = ["us"]
description = "Disk cleanup CLI for developers - clean node_modules, target, .venv, Docker, Xcode caches and 50+ cache types"
license = "WTFPL"
repository = "https://github.com/us/null-e"
homepage = "https://github.com/us/null-e"
keywords = ["cleanup", "disk-space", "developer-tools", "cache", "cli"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
readme = "README.md"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async/Parallel processing
rayon = "1.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
dashmap = "6.1"

# Filesystem operations
jwalk = "0.8"
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"
dirs = "6.0"
fs_extra = "1.3"

# Git integration
gix = { version = "0.77", default-features = false, features = ["max-performance", "status"] }

# Trash support (cross-platform)
trash = "5.2"

# TUI (Terminal User Interface)
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Utilities
uuid = { version = "1.19", features = ["v4"] }
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
indicatif = "0.17"
console = "0.16"
num_cpus = "1.17"
once_cell = "1.21"
regex = "1.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Docker (optional)
bollard = { version = "0.20", optional = true }

[dev-dependencies]
tempfile = "3.9"
assert_fs = "1.0"
predicates = "3.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"

[features]
default = ["docker"]
docker = ["dep:bollard"]
full = ["docker"]

[[bin]]
name = "null-e"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
